feat: register phone number
